# Ai_interviewer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_api.py
Data/: question.py  question_ingestor.py  resume.py  resume_embeddings.py  sample_resume_dummy.txt
agents/: evaluator_agent.py  feedback_agent.py  main_agent.py  question_agent.py  state.py  supervisor_agent.py
ai_interviewer.egg-info/: PKG-INFO  SOURCES.txt
data/: user_profiles.json
frontend/: app.js  index.html  serve.py  style.css
models/: model_loader.py
qdrant/: qdrant.py
utils/: Data_ingestion.py  difficulty.py  domain.py  voice_stt.py  voice_tts.py
