[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AI_interviewer"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["AI_interviewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning"
]