[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_interviewer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic",
  "loguru"
]

[tool.setuptools.packages.find]
include = ["ai_interviewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning"
]